# Simulador-Cidade-Opengl

./: .gitignore  CMakeLists.txt  Instancia.cpp  Instancia.h  Poligono.cpp  Poligono.h  Ponto.cpp  Ponto.h  README.md  TextReader.h  TextureClass.h  avioes.txt  carro.txt  cidade.txt  cidade2.txt  cidadeOld.txt  makefile  meumain.cpp  program
lib/: Elemento.h  ImageClass.h  Instancia.h  ListaDeCoresRGB.h  Poligono.h
src/: ImageClass.cpp  Instancia.cpp  ListaDeCoresRGB.cpp  Poligono.cpp  Ponto.cpp  Temporizador.cpp  TextureClass.cpp  meumain.cpp
